[package]
name = "Mugs_Marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mugs_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
mpl-token-metadata = { version = "^3.0.0" }
mpl-token-auth-rules = { version = "1.4.3", features = ["no-entrypoint"] }
solana-program = "=1.17.34"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
